--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,14 @@
 <div id="nav-bg">
   <nav id="top-nav">
-    <a href="/" id="logo">./missing-semester</a>
+    <a href="/" id="logo">./missing-semester-it</a>
     <input type="checkbox" id="menu-icon">
     <label class="menu-label" for="menu-icon"></label>
     <div class="trigger">
       <div class="trigger-child">
-        <span class="nav-link"><a href="/2020/">lectures</a></span>
-        <span class="nav-link"><a href="/about/">about</a></span>
+        <span class="nav-link"><a href="/2020/">lezioni</a></span>
+        <span class="nav-link"><a href="/about/">informazioni</a></span>
+        <span class="nav-link"><a href="https://missing.csail.mit.edu">english</a></span>
+        <span class="nav-link"><a href="https://github.com/missing-semester-it/missing-semester-it.github.io">github</a></span>
       </div>
     </div>
   </nav>
