--- a/_layouts/lecture.html
+++ b/_layouts/lecture.html
@@ -9,7 +9,7 @@ layout: default
     <iframe src="https://www.youtube.com/embed/{{ page.video.id }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 {% elsif page.video %}
-  <p class="center gap accent"><strong>Lecture video coming soon!</strong></p>
+  <p class="center gap accent"><strong>Video della lezione disponibile a breve!</strong></p>
 {% endif %}
 
 {{ content }}
@@ -17,6 +17,6 @@ layout: default
 <hr>
 
 <div class="small center">
-<p><a href="https://github.com/missing-semester/missing-semester/blob/master/{{ page.path }}">Edit this page</a>.</p>
-<p>Licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0">CC BY-NC-SA</a>.</p>
+<p><a href="https://github.com/missing-semester-it/missing-semester-it.github.io/blob/master/{{ page.path }}">Modifica questa pagina</a>.</p>
+<p>Rilasciato sotto licenza <a href="https://creativecommons.org/licenses/by-nc-sa/4.0">CC BY-NC-SA</a>.</p>
 </div>
